# UnderSeaModelingLibrary

./: .clang-format  .cproject  .gitattributes  .gitignore  .project  CMakeLists.txt  COPYRIGHT.txt  Common.mk  Doxyfile  DoxygenLayout.xml  Mainpage.h  Makefile  README  README.txt  Symbols.mk  make_tar.sh  todo.txt  usml-api.html  usml-devel.spec  usml-install.html  usml.spec  usmlBuildStudies.cmake  usmlBuildTest.cmake  usml_api.html  usml_config.h  usml_frontpage.html  usml_install.html  usml_packages.dia  usml_release_notes.html  usml_test.cc
beampatterns/: beampattern_utilities.cc  beampattern_utilities.h  beampatterns.h  bp_arb.cc  bp_arb.h  bp_cardioid.cc  bp_cardioid.h  bp_gaussian.cc  bp_gaussian.h  bp_grid.cc  bp_grid.h  bp_line.cc  bp_line.h  bp_model.cc  bp_model.h  bp_multi.cc  bp_multi.h  bp_omni.cc  bp_omni.h  bp_piston.cc  bp_piston.h  bp_planar.cc  bp_planar.h  bp_solid.cc  bp_solid.h  bp_trig.cc  bp_trig.h
bistatic/: bistatic.h  bistatic_manager.cc  bistatic_manager.h  bistatic_pair.cc  bistatic_pair.h
biverbs/: biverb_collection.cc  biverb_collection.h  biverb_generator.cc  biverb_generator.h  biverb_model.h  biverbs.h
config/: CMakeLists.txt  FindUSML.cmake  README.txt  USMLConfig.cmake.in  USMLConfigVersion.cmake.in  USMLUse.cmake  USML_Formatter.xml  VERSION.txt  cmake_uninstall.cmake.in  dictionary.txt  make_tar.sh  matrix_expression_1_57.hpp  usmlBuildSetup.cmake  usmlBuildStudies.cmake  usmlBuildTest.cmake  vector_expression.hpp
data/: README.txt
doc/: Array Orientation in World Coordinates.docx  Array Orientation in World Coordinates.pptx  EigenverbDesign_Draft.docx  Geodetic Acoustic Rays URI Feb 2011.pptx  Geodetic Acoustic Rays URI Jan 2011-rework.pptx  Geodetic Acoustic Rays URI Jan 2011.pptx  Geodetic Acoustic Rays URI March 2010.ppt  Geodetic Acoustic Rays URI March 2011.pptx  Install+CentOS+8+for+WaveQ3D+on+VirtualBox.docx  Numeric Computing Appendix.doc  Numeric Computing for M&S.doc  README.txt  Reflection.ppt  Reilly Propagation Spherical-Time ASA Nov 2011.pptx  Reilly Propagation Spherical-Time HiFAST Aug 2011.pptx  Sonar Propagation Modeling in Spherical-Time Coordinates June 2011.pptx  Sonar Propagation Modeling in Spherical-Time Coordinates.doc  Surface Reflection Geometry.docx  USML_Formatter.xml  Undersea Modeling Library.pptx  WavefrontFold.eps  WavefrontFold.ggb  classic_rays_proploss_tests.xlsx  eigenray_lloyds_0.eps  eigenray_lloyds_1.eps  proploss_lloyds_depth.eps  proploss_lloyds_range.eps  proploss_lloyds_range_zoom.eps  shallow_pedersen_test_for_final_report.m  usml_frontpage.html
eigenrays/: eigenray_collection.cc  eigenray_collection.h  eigenray_listener.h  eigenray_model.h  eigenray_notifier.cc  eigenray_notifier.h  eigenrays.h
eigenverb/: data_collections.h  eigenverb.h  eigenverb_bistatic.h  eigenverb_collection.cc  eigenverb_collection.h  eigenverb_interpolator.cc  eigenverb_interpolator.h  eigenverb_listener.h  eigenverb_model.cc  eigenverb_model.h  eigenverb_monostatic.cc  eigenverb_monostatic.h  eigenverb_notifier.cc  eigenverb_notifier.h  envelope.h  envelope_bistatic.cc  envelope_bistatic.h  envelope_collection.cc  envelope_collection.h  envelope_generator.cc  envelope_generator.h  envelope_listener.h  envelope_model.cc  envelope_model.h  envelope_monostatic.cc  envelope_monostatic.h  envelope_notifier.cc  envelope_notifier.h  proploss_collection.cc  proploss_collection.h  receiver_data.h  source_data.h  wave_generator.cc  wave_generator.h  wavefront_generator.cc  wavefront_generator.h  wavefront_listener.h
eigenverbs/: eigenverb_collection.cc  eigenverb_collection.h  eigenverb_listener.h  eigenverb_model.h  eigenverb_notifier.cc  eigenverb_notifier.h  eigenverbs.h
managed/: managed.h  managed_obj.h  manager_listener.h  manager_template.h  update_listener.h  update_notifier.h
matlab/: coldhot.m  demo_gui.m  demo_topdown.m  greatCircleDistance.m  ll2utm.m  load_arc_ascii.m  load_bathymetry.m  load_eigenverbs.m  load_envelopes.m  load_netcdf_proploss.m  load_netcdf_wavefront.m  load_profile.m  load_proploss.m  load_sensors.m  load_wavefront.m  netcdf.m  plot_bathymetry_2d.m  plot_bathymetry_3d.m  plot_profile.m  plot_proploss_3d.m  plot_raytrace_2d.m  plot_raytrace_3d.m  rayleigh_loss.m  refraction_surface_duct.m  rsquare.m  scattering_lambert.m  spherical_dist.m  spherical_dist2.m  spherical_dot.m  spherical_dotnorm.m  transmission_loss_sensativity.m  view_wave.m  visualize_proploss_3d.m  visualize_rays_2d.m  visualize_rays_3d.m
netcdf/: Makefile  coards_standard.html  netcdf_bathy.cc  netcdf_bathy.h  netcdf_coards.h  netcdf_files.h  netcdf_profile.cc  netcdf_profile.h  netcdf_woa.cc  netcdf_woa.h
ocean/: .gitignore  Makefile  ambient_constant.h  ambient_model.h  ambient_wenz.cc  ambient_wenz.h  ascii_arc_bathy.cc  ascii_arc_bathy.h  ascii_profile.cc  ascii_profile.h  ascii_profile_factory.cc  ascii_profile_factory.h  attenuation_constant.cc  attenuation_constant.h  attenuation_model.h  attenuation_thorp.cc  attenuation_thorp.h  boundary_flat.cc  boundary_flat.h  boundary_flat_mt.h  boundary_grid.h  boundary_grid_fast.h  boundary_grid_mt.h  boundary_lock.h  boundary_model.h  boundary_mt.h  boundary_slope.cc  boundary_slope.h  data_grid_mackenzie.h  ocean.h  ocean_model.h  ocean_shared.cc  ocean_shared.h  ocean_utils.cc  ocean_utils.h  profile_catenary.cc  profile_catenary.h  profile_grid.h  profile_grid_fast.h  profile_grid_mt.h  (+38 more)
python/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
python/src/usml/: eigenrays.py  netcdf.py  pedersen.py  plot.py
python/tests/: etopo_cmp.nc  install.ipynb  pedersen.ipynb  testbathy.py  testbeams.py  testeigenrayextra.py  testnetcdf.py  testocean.py  testpedersen.py  testprofile.py  testsensorpair.py  testtypes.py  testusml.ipynb  testusml.py  testwaveq3d.py  unit_test.py
rvbenv/: rvbenv.h  rvbenv_collection.cc  rvbenv_collection.h  rvbenv_generator.cc  rvbenv_generator.h  rvbenv_model.cc  rvbenv_model.h
rvbts/: rvbts.h  rvbts_collection.cc  rvbts_collection.h  rvbts_generator.cc  rvbts_generator.h
scripts/: build.sh  clean.sh  (+2 more)
(+684 files in other folders)
