[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "usml"
version = "3.0.0"
authors = [
    { name = "Sean M. Reilly", email = "campreilly@gmail.com" },
]
description = "Visualization and testing tools for Under Sea Modeling Library (USML)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 2-Clause License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/campreilly/UnderSeaModelingLibrary"
"Bug Tracker" = "https://github.com/campreilly/UnderSeaModelingLibrary/issues"
